added time to test app

--- a/week2/day2/sinatra/views/about.erb
+++ b/week2/day2/sinatra/views/about.erb
@@ -3,3 +3,13 @@
 <p>My name is Jose Perez-Roura and 
 	I am currently a student at IronHack. 
 	This is my first web app from bootcamp.</p>
+
+	
+	<%= Time.now %>
+	<% if Date.today.tuesday? %>
+	<p>The World Series Game 1 is on tonight!</p>
+	<% else %>
+	<p>Go rent a movie!</p>
+	
+	<% end %>
+
