--- a/week2/day2/sinatra/views/home.erb
+++ b/week2/day2/sinatra/views/home.erb
@@ -1,19 +1,14 @@
-<center><h1>Jose's First Web App</h1>
-<p>First Ironhack web app!<p>
+<center><h1>Jose's First Web Application!</h1>
+
 
 <ul>
-
 	<l1>
 	<a href="/"> Home </a>
 	</l1>
-
 	<l1>
 	<a href="/hi"> Hello </a>
 	</l1>
-
 	<l1>
 	<a href="/about"> About </a>
 	</l1>
-
-
 </ul>
