added mad max movie loop

--- a/week2/day2/sinatra/views/about.erb
+++ b/week2/day2/sinatra/views/about.erb
@@ -1,8 +1,9 @@
-<center><h1>Jose's Page</h1><p>
+<center><h1>Jose's Page</h1><p></center>
 <h3>About Me</h3>
 <p>My name is Jose Perez-Roura and 
 	I am currently a student at IronHack. 
-	This is my first web app from bootcamp.</p>
+	This is my first web app from bootcamp. I like
+	to watch baseball and hockey. The World Series will be starting shortly.</p>
 
 	
 	<%= Time.now %>
