--- a/week2/day2/sinatra/views/home.erb
+++ b/week2/day2/sinatra/views/home.erb
@@ -1,14 +1,17 @@
-<center><h1>Jose's First Web Application!</h1>
+<center><h1>Jose's First Web Application!</h1></center>
 
 
 <ul>
-	<l1>
+	<li>
 	<a href="/"> Home </a>
-	</l1>
-	<l1>
+	</li>
+	<li>
 	<a href="/hi"> Hello </a>
-	</l1>
-	<l1>
+	</li>
+	<li>
 	<a href="/about"> About </a>
-	</l1>
+	</li>
+	<li>
+	<a href="/best_madmax"> Mad Max Movies </a>
+	</li>
 </ul>
