--- a/week2/day2/calculator/views/add.erb
+++ b/week2/day2/calculator/views/add.erb
@@ -13,13 +13,11 @@
 <h1>Add</h1>
 
 <form action="/calculate_add" method="POST">
-  <input type="number" placeholder="1st number"> +
-  <input type="number" placeholder="2nd number">
+  <input type="number" name="first_number" placeholder="1st number"> +
+  <input type="number" name="second_number" placeholder="2nd number">
 
-<button type="submit">Calculate</button>
+  <button type="submit">Calculate</button>
 </form>
-
-
 
 </body>
 </html>
