--- a/week2/day2/calculator/views/home.erb
+++ b/week2/day2/calculator/views/home.erb
@@ -7,4 +7,13 @@
 	<li>
 	<a href="/add"> Add </a>
 	</li>
+	<li>
+	<a href="/add"> Subtract </a>
+	</li>
+	<li>
+	<a href="/add"> Multiply </a>
+	</li>
+	<li>
+	<a href="/add"> Divide </a>
+	</li>
 </ul>
