--- a/week2/day2/calculator/views/home.erb
+++ b/week2/day2/calculator/views/home.erb
@@ -8,12 +8,12 @@
 	<a href="/add"> Add </a>
 	</li>
 	<li>
-	<a href="/add"> Subtract </a>
+	<a href="/subtract"> Subtract </a>
 	</li>
 	<li>
-	<a href="/add"> Multiply </a>
+	<a href="/multiply"> Multiply </a>
 	</li>
 	<li>
-	<a href="/add"> Divide </a>
+	<a href="/divide"> Divide </a>
 	</li>
 </ul>
