server.erb corrections

--- a/week2/day2/calculator/views/home.erb
+++ b/week2/day2/calculator/views/home.erb
@@ -5,9 +5,9 @@
 	<a href="/"> Home </a>
 	</li>
 	<li>
-	<a href="/add"> Add </a>
+	<a href="/functions"> Calculator </a>
 	</li>
-	<li>
+<!-- 	<li>
 	<a href="/subtract"> Subtract </a>
 	</li>
 	<li>
@@ -15,5 +15,5 @@
 	</li>
 	<li>
 	<a href="/divide"> Divide </a>
-	</li>
+	</li> -->
 </ul>
