--- a/week2/day2/calculator/views/functions.erb
+++ b/week2/day2/calculator/views/functions.erb
@@ -15,10 +15,10 @@
   <input type="number" name="first_number" placeholder="1st number"> 
   <input type="number" name="second_number" placeholder="2nd number">
 <br>
-  <button type="submit" name="operation" value="addition">ADD</button>
-  <button type="submit" name="operation" value="addition">SUBTRACT</button>
-  <button type="submit" name="operation" value="addition">MULTIPLY</button>
-  <button type="submit" name="operation" value="addition">DIVIDE</button>
+  <button type="submit" name="operation" value="add">ADD</button>
+  <button type="submit" name="operation" value="subtract">SUBTRACT</button>
+  <button type="submit" name="operation" value="multiply">MULTIPLY</button>
+  <button type="submit" name="operation" value="divide">DIVIDE</button>
 </form>
 
 </body>
