--- a/week2/day2/calculator/views/functions.erb
+++ b/week2/day2/calculator/views/functions.erb
@@ -11,7 +11,7 @@
 <!-- views/add.erb -->
 <h1>Multi-Function Calculator</h1>
 
-<form action="/calculate" method="POST">
+<form action="/calculate" method="post">
   <input type="number" name="first_number" placeholder="1st number"> 
   <input type="number" name="second_number" placeholder="2nd number">
 <br>
