added sessions on sinatra day3

--- a/week2/day3/more_sinatra/views/home.erb
+++ b/week2/day3/more_sinatra/views/home.erb
@@ -1,4 +1,9 @@
 <center><h1>Jose's First Web Application!</h1></center>
+<p> Your currently selected beverage is:
+<% if @drank != nil %> 
+
+<strong> <%= @drank %> </strong> </p>
+<% end %>
 
 
 <ul>
