password checker set up

--- a/week2/day2/calculator/views/result.erb
+++ b/week2/day2/calculator/views/result.erb
@@ -1,4 +1,7 @@
-
-
+<!DOCTYPE html>
+<html>
+<h1>Online Calculator</h1>
 
 <%=@first_number%> <%=@operation%> <%=@second_number%> = <%=@result%>
+
+</html>
