--- a/week2/day2/sinatra/views/best_madmax.erb
+++ b/week2/day2/sinatra/views/best_madmax.erb
@@ -1,6 +1,13 @@
-<h1> Jose's Site </h1>
+<head>
+<link rel="stylesheet" type="text/css" href="/style.css">
+</head>
+
+
+<header><h1> Jose's Site </h1></header>
 
 <h2> Jose's Favorite Mad Max Movie </h2>
+
+<img src="/furyroad.gif">
 
 <ul>
 <% @movies.each do |my_madmax| %>
