changes to todo list

--- a/week2/day3/todo/views/home.erb
+++ b/week2/day3/todo/views/home.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Todolist</title>
+    <title>My Todo List</title>
   </head>
   <body>
-    <h1>My Todolist</h1>
+    <h1>My Todo List</h1>
     <form>
   <label>
     Task Name:
