working task app

--- a/week2/day3/todo/views/home.erb
+++ b/week2/day3/todo/views/home.erb
@@ -1,38 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>My Todo List</title>
-  </head>
-  <body>
-    <h1>My Todo List</h1>
-    <form>
-  <label>
-    Task Name:
-    <input type="text" placeholder="Pick up milk">
-  </label>
-  <button type="button">
-    Add Task
-  </button>
-</form>
- <ul>
-  <li>
-    <label>
-      <input type="checkbox">
-      ???
-    </label>
-  </li>
-  <li>
-    <label>
-      <input type="checkbox">
-      ???
-    </label>
-  </li>
-  <li>
-    <label>
-      <input type="checkbox">
-      ???
-    </label>
-  </li>
+
+<head>
+<title>My Todo List</title>
+</head>
+
+    
+<h1>Jose's To Do List</h1>
+
+<% @tasks.each do |task| %>
+
+<ul>
+
+<%= task.content %>
+
 </ul>
-  </body>
-</html>
+
+<% end %>
+
+ <a href="/new_task"> Add Task </a>
