--- a/week2/day3/todo/views/home.erb
+++ b/week2/day3/todo/views/home.erb
@@ -6,14 +6,13 @@
     
 <h1>Jose's To Do List</h1>
 
-<% @tasks.each do |task| %>
-
 <ul>
-
-<%= task.content %>
-
-</ul>
+<% @tasks.each do |task| %>
+<li>
+<%= task.content %> <button type="button" name="completed">task complete</button>
+</li>
 
 <% end %>
+</ul>
 
  <a href="/new_task"> Add Task </a>
