--- a/week3/day1/netflix_prototype/styles.css
+++ b/week3/day1/netflix_prototype/styles.css
@@ -3,6 +3,16 @@
 	src: url(fonts/ProximaNova-Reg.otf);
 	font-weight: normal;
 }
+@font-face{
+	font-family: proximaNova;
+	src: url(fonts/ProximaNova-Light.otf);
+	font-weight: lighter;
+}
+@font-face{
+	font-family: proximaNova;
+	src: url(fonts/ProximaNova-Sbold.otf);
+	font-weight: bold;
+}
 
 .newreleases{
 	font-size: 35px;
@@ -34,7 +44,7 @@
     background-color: rgb(17, 131, 202); 
     border: none;
     color: white;
-    padding: 15px 52px;
+    padding: 15px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -59,7 +69,7 @@ div.transbox p {
   margin: 50px;
   padding: 30px;
   font-weight: 900;
-  font-size: 40px;
+  font-size: 50px;
   color: white;
 
 	
