added calcultor form and result page

--- a/week4/timetracking/app/views/site/contact.html.erb
+++ b/week4/timetracking/app/views/site/contact.html.erb
@@ -1,3 +1,7 @@
-<h3>Contact<h3>
 
-<a href="">contact@example.com</a>
+<p>
+	<h3>Contact us at:</h3>
+	<a href="mailto:tmtrckng@example.com">
+	tmtrckng@example.com
+	</a>
+</p>
