--- a/week4/timetracking/app/views/site/home.html.erb
+++ b/week4/timetracking/app/views/site/home.html.erb
@@ -1,3 +1,9 @@
-<h1>Welcome to this timetracking tool</h1>
 
-<p>Ironhack powered</p>
+
+<!-- <img src="/assets/vader.gif" alt="vader getting pizza slice"> -->
+<%= image_tag "vader.gif" %>
+<h2> Pricing: </h2>
+
+<p>
+	Enterprise Plan:
+	<strong> $1,000 per User per Month </strong>
