--- a/week4/timetracking/app/views/layouts/application.html.erb
+++ b/week4/timetracking/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Timetracking</title>
-    <%= csrf_meta_tags %>
+  <meta charset="utf-8">
+  <title>Timetracking</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <header>
+  <h1> tmtrckng </h1>
+	
+   <%= render "blah/navigation" %> 
+   
+
+   </header>
+
+
+   <%= yield %>
+
+   <footer>
+   <p> Made with &hearts; at Ironhack.
+   </footer>
   </body>
 </html>
