working on asciis results page

--- a/week4/worldcentral/app/views/text_inspections/results.html.erb
+++ b/week4/worldcentral/app/views/text_inspections/results.html.erb
@@ -3,4 +3,5 @@
 <p>
 "<%= @text %>"  has this many words: <%= @word_count %> 
 </p>
+<p> It will take you <strong><%= @y %></strong> seconds to read that amount of text.
 
