added to database through seeds.rb file

--- a/week4/timetracking/app/views/blah/_navigation.html.erb
+++ b/week4/timetracking/app/views/blah/_navigation.html.erb
@@ -9,4 +9,5 @@
 		<li> <a href="/"> Home </a> </li>
 		<li> <a href="/contact"> Contact </a> </li>
 		<li> <a href="/calculator"> Addition</a> </li>
+		<li> <a href="/projects"> List of Projects</a> </li>
 	</ul>
