got database working

--- a/week4/address_book/app/views/layouts/application.html.erb
+++ b/week4/address_book/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+   <header>
+  <h1> Address Book </h1>
+	
+   <%= render "blah/navigation" %> 
+   
+
+   </header>
+
     <%= yield %>
   </body>
 </html>
+
