--- a/week4/timetracking/app/views/time_entries/index.html.erb
+++ b/week4/timetracking/app/views/time_entries/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 
-	<% @my_entries.each do |entry| %>
+	<% @my_entry.each do |entry| %>
 
 	<li>
 
@@ -12,8 +12,12 @@
 
 	<%= entry.date %>
 
+	<%= entry.comments %>
+
 	</li>
 
 	<% end %>
 
 </ul>
+
+<%= link_to "Add a new time entry", new_project_time_entry_path(@my_project) %>
