--- a/week4/timetracking/app/views/time_entries/edit.html.erb
+++ b/week4/timetracking/app/views/time_entries/edit.html.erb
@@ -1,17 +1,7 @@
-<% if @my_entry.errors.any? %>
-	<ul>
-	<% @my_entry.errors.full_messages.each do |error_msg| %>
-		<li><%= error_msg %></li>
-<% end %>
-</ul>
-<% end %>
-
-
 <%= form_for [@my_project, @my_entry] do |f| %>
+<br>
 
-	<%= f.label :hours %>
-
-	<%= f.text_field :hours %>
+	
 
 	<%= f.label :hours %>
 
@@ -38,5 +28,7 @@
 <br>
 
 	<%= f.button %>
+	
+	<%= link_to 'Cancel', project_time_entries_path(@my_project) %>
 
 <% end %>
