--- a/week4/timetracking/app/views/time_entries/index.html.erb
+++ b/week4/timetracking/app/views/time_entries/index.html.erb
@@ -14,6 +14,8 @@
 
 	<%= entry.comments %>
 
+	<%= link_to "Edit", edit_project_time_entry_path(@my_project, entry) %>
+	
 	</li>
 
 	<% end %>
@@ -21,3 +23,4 @@
 </ul>
 
 <%= link_to "Add a new time entry", new_project_time_entry_path(@my_project) %>
+
