--- a/week4/timetracking/app/views/time_entries/edit.html.erb
+++ b/week4/timetracking/app/views/time_entries/edit.html.erb
@@ -1,34 +1,3 @@
-<%= form_for [@my_project, @my_entry] do |f| %>
-<br>
+<h2> Edit a time entry </h2>
 
-	
-
-	<%= f.label :hours %>
-
-	<%= f.text_field :hours %>
-
-<br>
-
-	<%= f.label :minutes %>
-
-	<%= f.text_field :minutes %>
-
-<br>
-
-	<%= f.label :comments %>
-
-	<%= f.text_field :comments %>
-
-<br>
-
-	<%= f.label :date %>
-
-	<%= f.date_field :date %>
-
-<br>
-
-	<%= f.button %>
-	
-	<%= link_to 'Cancel', project_time_entries_path(@my_project) %>
-
-<% end %>
+    <%= render "form" %>
