--- a/week4/timetracking/app/views/time_entries/new.html.erb
+++ b/week4/timetracking/app/views/time_entries/new.html.erb
@@ -1,42 +1,3 @@
-<% if @my_entry.errors.any? %>
-	<ul>
-	<% @my_entry.errors.full_messages.each do |error_msg| %>
-		<li><%= error_msg %></li>
-<% end %>
-</ul>
-<% end %>
+<h2> Add a new time entry </h2>
 
-
-<%= form_for [@my_project, @my_entry] do |f| %>
-
-	<%= f.label :hours %>
-
-	<%= f.text_field :hours %>
-
-	<%= f.label :hours %>
-
-	<%= f.text_field :hours %>
-
-<br>
-
-	<%= f.label :minutes %>
-
-	<%= f.text_field :minutes %>
-
-<br>
-
-	<%= f.label :comments %>
-
-	<%= f.text_field :comments %>
-
-<br>
-
-	<%= f.label :date %>
-
-	<%= f.date_field :date %>
-
-<br>
-
-	<%= f.button %>
-
-<% end %>
+<%=  render "form"  %>
