previous version before full deletion

--- a/week4/address_book/app/views/projects/index.html.erb
+++ b/week4/address_book/app/views/projects/index.html.erb
@@ -3,5 +3,9 @@
 <li>
 <%= x.name %>: Address: <%= x.address %> Phone: <%= x.phone %> Email: <%= x.email %>
 </li>
+
+
+
 <%end%>
 </ul>
+<a href="/new"> Add Contact</a>
