working form that lists contacts

--- a/week4/address_book/app/views/layouts/application.html.erb
+++ b/week4/address_book/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+ 
     <%= yield %>
+       <%= render "blah/navigation" %>
+  
+
+
+<footer>Built by Jose</footer>
   </body>
 </html>
