--- a/week4/concerts/app/views/layouts/application.html.erb
+++ b/week4/concerts/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+  <h1> Concerts App </h1>  
+ <%= render "blah/navigation" %> 
+
     <%= yield %>
+ 
+	<footer>
+   <p> Made with &hearts; at Ironhack.
+   </footer>
   </body>
 </html>
