completed most of iteration 2

--- a/week4/concerts/app/views/concerts/index.html.erb
+++ b/week4/concerts/app/views/concerts/index.html.erb
@@ -3,13 +3,31 @@
 
 <ul>
 
-	<% @concerts.each do |one_concert| %>
+<!-- 	<% @concerts.each do |one_concert| %>
+<li>
+Name: <%= one_concert.name %> Venue: <%= one_concert.venue %> City: <%= one_concert.city %> Date: <%= one_concert.date %> Price: <%= one_concert.price %> Description: <%= one_concert.description %>	
+</li>
+<% end %> -->
+
+<% @todays_concerts.each do |one_concert| %>
 <li>
 Name: <%= one_concert.name %> Venue: <%= one_concert.venue %> City: <%= one_concert.city %> Date: <%= one_concert.date %> Price: <%= one_concert.price %> Description: <%= one_concert.description %>	
 	
 </li>
+
+<% end %>
+<% @this_months_concerts.each do |one_concert| %>
+<li>
+Name: <%= one_concert.name %> Venue: <%= one_concert.venue %> City: <%= one_concert.city %> Date: <%= one_concert.date %> Price: <%= one_concert.price %> Description: <%= one_concert.description %>	
+	
+</li>
+
+
+
+
+
 </ul>
-	<% end %>
+<% end %>
 
 
 
