--- a/week5/spotify-ajax/css/styles.css
+++ b/week5/spotify-ajax/css/styles.css
@@ -1,4 +1,18 @@
-.container {
-	background-color: #000000,
+img {
+	height: 150px;
+	width: auto;
+	
+}
 
+body {
+	background-color: black;
+	color: #00ff00;
+}
+
+button {
+	background-color: #606060;
+}
+
+input[type="text"] {
+    background-color: black;
 }
