--- a/week5/spotify-ajax/css/styles.css
+++ b/week5/spotify-ajax/css/styles.css
@@ -7,13 +7,15 @@
 .btn {
 	background-color: #808080;
 /*	color: #3333FF;*/
-	margin-top: 5px;
+	/*margin-top: 5px;*/
 }
 
 
 img {
 	height: 150px;
 	width: auto;
+	display: inline-block;
+	
 
 }
 
