completed class pokedex exercise

--- a/week5/pokemon/app/views/pokemon/index.html.erb
+++ b/week5/pokemon/app/views/pokemon/index.html.erb
@@ -36,6 +36,28 @@
 
           <dt>Weight</dt>
           <dd class="js-pkmn-weight"></dd>
+        
+          <dt>HP</dt>
+          <dd class="js-pkmn-hp"></dd>
+          
+          <dt>Attack</dt>
+          <dd class="js-pkmn-attack"></dd>
+
+          <dt>Defense</dt>
+          <dd class="js-pkmn-defense"></dd>
+
+          <dt>Sp.Attack</dt>
+          <dd class="js-pkmn-spattack"></dd>
+
+          <dt>Sp.Defense</dt>
+          <dd class="js-pkmn-spdefense"></dd>
+
+          <dt>Speed</dt>
+          <dd class="js-pkmn-speed"></dd>
+
+          <dt>Type</dt>
+          <dd class="js-pkmn-type"></dd>
+
         </dl>
       </div><!-- .modal-body -->
 
