--- a/week5/spotify-player/css/style.css
+++ b/week5/spotify-player/css/style.css
@@ -1,5 +1,23 @@
+form {
+
+  margin-top: 20px;
+}
+
+.btn {
+  margin-top: 4px;
+}
+body {
+  background-color: #cee0e0;
+}
+
+h1{
+  color: grey;
+  text-shadow: 2px 2px #ff0000;
+}
+
+
 .widget {
-  width: 300px;
+  width: 330px;
   margin: 10px auto 0;
   border-radius: 5px;
   overflow: hidden;
@@ -117,7 +135,7 @@
 
 .cover {
   height: 300px;
-  width: 300px;
+  width: 330px;
   position: relative;
 }
 
