--- a/week5/spotify-player/css/style.css
+++ b/week5/spotify-player/css/style.css
@@ -1,10 +1,16 @@
+.form-control{
+  border: 1px solid #3c3c3c;
+}
+
 form {
 
   margin-top: 20px;
+
 }
 
 .btn {
   margin-top: 4px;
+  border: 1px solid #3c3c3c;
 }
 body {
   background-color: #cee0e0;
@@ -12,7 +18,7 @@ body {
 
 h1{
   color: grey;
-  text-shadow: 2px 2px #ff0000;
+  text-shadow: 1px 1px #000000;
 }
 
 
@@ -22,6 +28,7 @@ h1{
   border-radius: 5px;
   overflow: hidden;
   display: block;
+  border: 1px solid #3c3c3c;
 }
 
 .header {
@@ -137,6 +144,10 @@ h1{
   height: 300px;
   width: 330px;
   position: relative;
+}
+
+footer{
+  margin-top: 30px;
 }
 
 .cover img {
