changed user & password form

--- a/week6/auth-exercise-master/app/views/users/new.html.erb
+++ b/week6/auth-exercise-master/app/views/users/new.html.erb
@@ -1,9 +1,21 @@
 <h1>Sign up!</h1>
 
 <%= form_for :user, url: '/users' do |f| %>
+<div>
+<%= f.label :username, "Name" %>
+<%= f.text_field :username %>
+</div>
 
-  Name: <%= f.text_field :username %>
-  Email: <%= f.text_field :email %>
-  <%= f.submit "Submit" %>
+<div>
+<%= f.label :email %>
+<%= f.password_field :password %>
+</div>
+
+<div>
+<%= f.label :password_confirmation %>
+<%= f.password_field :password_confirmation %>
+</div>
+
+ <%= f.button %>
 
 <% end %>
