--- a/week6/auth-exercise-master/app/views/users/new.html.erb
+++ b/week6/auth-exercise-master/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Sign up!</h1>
 
 <%= form_for :user, url: '/users' do |f| %>
+
 <div>
 <%= f.label :username, "Name" %>
 <%= f.text_field :username %>
@@ -8,6 +9,11 @@
 
 <div>
 <%= f.label :email %>
+<%= f.email_field :email %>
+</div>
+
+<div>
+<%= f.label :password %>
 <%= f.password_field :password %>
 </div>
 
