views/sessions/new.html.erb file created

--- a/week6/auth-exercise-master/app/views/users/home.html.erb
+++ b/week6/auth-exercise-master/app/views/users/home.html.erb
@@ -2,5 +2,6 @@
 
   <%= link_to "Sign up", "/signup" %><br>
   <%= link_to "My profile", "/profile" %><br>
-  <%= link_to "All profiles", "/users" %>
+  <%= link_to "All profiles", "/users" %><br>
+  <%= link_to "Login", "/login" %>
 
