--- a/week6/auth-exercise-master/app/views/users/home.html.erb
+++ b/week6/auth-exercise-master/app/views/users/home.html.erb
@@ -1,7 +1,14 @@
-<h1>Hello, <%= @name %>!</h1>
+<h1>Hello, <%= @name %>! </h1>
 
-  <%= link_to "Sign up", "/signup" %><br>
+<% if session[:user_id] %>
+
   <%= link_to "My profile", "/profile" %><br>
   <%= link_to "All profiles", "/users" %><br>
-  <%= link_to "Login", "/login" %>
+  <%= link_to "Logout", "/logout", method: "delete" %><br>
+
+<% else %>
+
+  <%= link_to "Sign up", "/signup" %><br>
+  <%= link_to "Login", "/login" %><br>
+<% end %>
 
