--- a/week6/auth-exercise-master/app/assets/stylesheets/users.scss
+++ b/week6/auth-exercise-master/app/assets/stylesheets/users.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.login-success {
+	background-color: lightgreen;
+	color: black;
+	border-radius: 3px;
+	padding: 20px;
+}
