--- a/week6/auth-exercise-master/app/views/users/home.html.erb
+++ b/week6/auth-exercise-master/app/views/users/home.html.erb
@@ -1,5 +1,12 @@
 <h1>Hello, <%= @name %>! </h1>
 
+<% if flash[:login_success] %>
+<p class="login-success">
+<%= flash[:login_success] %>
+</p>
+<% end %>
+
+
 <% if session[:user_id] %>
 
   <%= link_to "My profile", "/profile" %><br>
