--- a/week6/auth-exercise-master/app/assets/stylesheets/users.scss
+++ b/week6/auth-exercise-master/app/assets/stylesheets/users.scss
@@ -7,3 +7,10 @@
 	border-radius: 3px;
 	padding: 20px;
 }
+
+.login-success {
+	background-color: red;
+	color: black;
+	border-radius: 3px;
+	padding: 20px;
+}
