secret users page for admin only

--- a/week6/auth-exercise-master/app/views/users/home.html.erb
+++ b/week6/auth-exercise-master/app/views/users/home.html.erb
@@ -17,7 +17,12 @@
 <% if session[:user_id] %>
 
   <%= link_to "My profile", "/profile" %><br>
-  <%= link_to "All profiles", "/users" %><br>
+
+  <% if @current_user.role == "admin" %>
+  <%= link_to "All profiles", "/users" %><br> 
+  <%= link_to "Secrets", "/secret_gif" %><br> 
+  <% end %>
+
   <%= link_to "Logout", "/logout", method: "delete" %><br>
 
 <% else %>
