added devise gem

--- a/week6/comic_app/app/views/layouts/application.html.erb
+++ b/week6/comic_app/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+  	<h1>CMC BKS</h1>
+
     <%= yield %>
+
+    <footer>Made with &hearts at IronHack</footer>
   </body>
 </html>
