--- a/week6/comic_app/app/views/layouts/application.html.erb
+++ b/week6/comic_app/app/views/layouts/application.html.erb
@@ -9,10 +9,26 @@
   </head>
 
   <body>
-  	<h1>CMC BKS</h1>
+    <header>
+  	 <h1>CMC BKS</h1>
+    </header>
+
+
+      <nav>
+        <ul>
+          <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
+          <li> <%= link_to "Login", new_user_session_path %> </li>
+          <li> <%= link_to "Logout", destroy_user_session_path, method: "delete" %> </li>
+
+        </ul>
+      </nav>
+
+
+  	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <%= yield %>
 
-    <footer>Made with &hearts at IronHack</footer>
+    <footer>Made at IronHack</footer>
   </body>
 </html>
