--- a/week6/comic_app/app/views/layouts/application.html.erb
+++ b/week6/comic_app/app/views/layouts/application.html.erb
@@ -6,26 +6,39 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
-  <body>
+  <body class="container">
     <header>
   	 <h1>CMC BKS</h1>
-    </header>
-
-
       <nav>
+        <% if user_signed_in? %>
+          <p>Welcome back <%= current_user.first_name %>!</p>
+          <% end %>
+
         <ul>
+          <% if user_signed_in? %>
+          
+          <li> <%= link_to "Logout", destroy_user_session_path, method: "delete" %> </li>
+          <% else %>
           <li> <%= link_to "Sign Up", new_user_registration_path %> </li>
           <li> <%= link_to "Login", new_user_session_path %> </li>
-          <li> <%= link_to "Logout", destroy_user_session_path, method: "delete" %> </li>
-
+          
+          <% end %>
         </ul>
       </nav>
+   </header>
 
+   <% if notice %>
+    <p class="notice"><%= notice %></p>
+    <% end %>
 
-  	<p class="notice"><%= notice %></p>
+    <% if alert %>
+
     <p class="alert"><%= alert %></p>
+
+    <% end %>
 
     <%= yield %>
 
