--- a/week6/comic_app/app/views/main/home.html.erb
+++ b/week6/comic_app/app/views/main/home.html.erb
@@ -1,3 +1,26 @@
 <p> Track your comic books and discover other users cool comics.</p>
 
 <h2>Start at only $99 bucks a month!</h2>
+
+
+<% if user_signed_in? %>
+<h3> <span class="glyphicon glyphicon-user" aria-hidden="true"></span>  See our users' profiles</h3>
+
+<ul>
+	<% @users_list.each do |one_user| %>
+		<li><%= link_to(one_user.first_name, user_path(one_user)) %> </li>
+		<% end %>
+</ul>
+
+<% else %>
+	<h3> Our Users </h3>
+
+	<%= link_to "Sign Up to see their profiles!", new_user_registration_path %>
+
+	<ul>
+		<% @users_list.each do |one_user| %>
+		<li> <%=one_user.first_name %> </li>
+		<% end %>
+
+	</ul>
+	<% end %>
