changed fontfile on bootstrap example2

--- a/uxui/bootstrap-components-2/styles.css
+++ b/uxui/bootstrap-components-2/styles.css
@@ -1,3 +1,8 @@
+@font-face { font-family: chunkfive; src: url('chunkfive/chunkfive.otf'); }
+body{
+  font-family: ChunkFive, sans-serif;
+}
+
 .center-content{
   padding: 0 17%;
 }
